+ Syntax: Static methods can be called using {Class::method()}
+ Compiler supports method calls into a method call's parameters
+ API: Added Dwoo->setPluginProxy() and Dwoo_IPluginProxy that allow you to
  hook into the compiler's plugin subsystem to provide your own plugin calls.
  Thanks to Denis Arh for the patch
   => http://forum.dwoo.org/viewtopic.php?id=70
* Syntax: Math expressions in strings are now only allowed when the entire
  expression is delimited, e.g. {"/$foo/$bar"} evaluates as just that while
  {"/`$foo/$bar`"} will result in "/".($foo/$bar), therefore processing the /
  as a division, this is better since URLs using / are far more common than
  math in strings
   => http://forum.dwoo.org/viewtopic.php?id=50
* Compiler now allows the use of the right delimiter inside strings (e.g. {"}"})
* Fixed a bug preventing if blocks containing a {elseif} followed by {else}
* Fixed the Dwoo_ILoader interface and implemented it in Dwoo_Loader now
   => http://forum.dwoo.org/viewtopic.php?id=70
* Fixed a compileId auto-generation creating conflicts
* Include allows paths going in upper levels now such as : "../foo.html"

[2008-06-28] 0.9.2
! BC Break: Renamed the {strip} modifier/function to {whitespace}, this does
  not affect the strip block, that has been moved off the compiler into a
  plugin. Which is why the name conflict had to be resolved. Please report
  any issue you might encounter when using the strip block
! BC Break: Changed the function signature of Dwoo_Block_Plugin::postProcessing
  it only affects you if you had any custom block plugins, see UPGRADE_NOTES
  for more details
! BC Break: Dwoo_ITemplate::cache() must now return the cached file name or
  false if caching failed, only affects you if you had a custom template class
  and implemented cache() yourself
! BC Break: Dwoo_Loader is not static anymore so anything you did on it directly
  will break. Use $dwoo->getLoader()->addDirectory() instead of