@@ -16,6 +16,8 @@
   hook into the compiler's plugin subsystem to provide your own plugin calls.
   Thanks to Denis Arh for the patch
    => http://forum.dwoo.org/viewtopic.php?id=70
++ Syntax: It is now possible to use a plugin's result as an object and call
+  a method or read a property from it, i.e. {fetchObject()->doStuff()}
 * Syntax: Math expressions in strings are now only allowed when the entire
   expression is delimited, e.g. {"/$foo/$bar"} evaluates as just that while
   {"/`$foo/$bar`"} will result in "/".($foo/$bar), therefore processing the /
